# ytdl

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
SafariExtension/: Local.xcconfig.sample  SETUP.md
SafariExtension/YTDLBridge/: AppDelegate.swift  Info.plist  ViewController.swift
SafariExtension/YTDLBridge Extension/: SafariWebExtensionHandler.swift
SafariExtension/YTDLBridge Extension/Resources/: background.js  manifest.json  popup.html  popup.js
SafariExtension/YTDLBridge Extension/Resources/_locales/en/: messages.json
SafariExtension/YTDLBridge.xcodeproj/: project.pbxproj
SafariExtension/YTDLBridge/Base.lproj/: Main.storyboard
SafariExtension/YTDLBridge/Resources/: Script.js
SafariExtension/YTDLBridge/Resources/Base.lproj/: Main.html
SafariExtension/YTDLBridgeTests/: YTDLBridgeTests.swift
SafariExtension/YTDLBridgeUITests/: YTDLBridgeUITests.swift  YTDLBridgeUITestsLaunchTests.swift
SafariExtension/scripts/: build_release.sh  release.sh
ytdl/: cli.py
